fix overflow

--- a/css/components/base.css
+++ b/css/components/base.css
@@ -24,6 +24,10 @@
   box-sizing: border-box;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 :root {
   /* ------ colors ------ */
 
